kubernetes/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  selector:
      matchLabels:
          app: myapp
  replicas: 2
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: myapp:1
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
