kubernetes/ingress.yaml
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: myapp-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
    - host: myapp.kube
      http:
          paths:
          - path: /
            backend:
                serviceName: myapp
                servicePort: 8000
